<resources>
    <string name="encrypt">Encrypt</string>
    <string name="app_name">Mirror</string>
    <string name="edit_host">Enter a host</string>
    <string name="edit_port">Enter a port</string>
    <string name="connect_button">Connect</string>
    <string name="message">Enter a message</string>
    <string name="send_message">Send</string>

    <string name="password">Enter Password</string>
    <string name="start_encryption">Start Encryption</string>
</resources>
