<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <EditText android:id="@+id/edit_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_host"
        android:inputType="phone" />

    <EditText android:id="@+id/edit_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_port"
        android:layout_below="@id/edit_host"
        android:inputType="number"/>

    <Button android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/connect_button"
        android:layout_below="@id/edit_port"
        android:onClick="connectServer" />

    <EditText android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:layout_below="@id/connect"/>

    <Button android:id="@+id/send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_message"
        android:layout_below="@id/message"
        android:onClick="sendMessage"/>

</RelativeLayout>